--- a/configs/TQS_D_1.7.ini
+++ b/configs/TQS_D_1.7.ini
@@ -22,11 +22,11 @@ SRState = 00 # Length: 1; Unit: Options (0: Disabled, 1: Enabled); Format: Decim
 SRF1 = 09 04 19 10 08 00 F7 EF E6 DE 00 00 00 00 0F 3F  # Length: 16; Unit: SRF1 values; Format: Signed; Source: TI; Comment: The table holds the specific parameters for using the SmartReflex mechanism
 SRF2 = 09 04 19 10 08 00 F7 EF E6 DE 00 00 00 00 00 00  # Length: 16; Unit: SRF2 values; Format: Signed; Source: TI; Comment: The table holds the specific parameters for using the SmartReflex mechanism 
 SRF3 = 09 04 19 10 08 00 F7 EF E6 DE 00 00 00 00 00 00  # Length: 16; Unit: SRF3 values; Format: Signed; Source: TI; Comment: The table holds the specific parameters for using the SmartReflex mechanism
-#SR_Debug_Table = 09 04 19 10 01 00 F7 EF E6 DE 00 00 00 00 00 00  # Length: 16; Unit: SR_Debug_Table values; Format: Signed; Source: TI; Comment: SR Debug values â€“ for TI internal use only
-#SR_SEN_N_P = 11 # Length: 1; Unit: SR_SEN_N_P values; Format: Unsigned; Source: TI; Comment: SR Debug values â€“ for TI internal use only
-#SR_SEN_N_P_Gain = AA # Length: 1; Unit: SR_SEN_N_P_GAIN values; Format: Unsigned; Source: TI; Comment: SR Debug values â€“ for TI internal use only
-#SR_SEN_NRN = B6 # Length: 1; Unit: SR_SEN_NRN values; Format: Unsigned; Source: TI ; Comment: SR Debug values â€“ for TI internal use only
-#SR_SEN_PRN = F0 # Length: 1; Unit: SR_SEN_PRN values; Format: Unsigned; Source: TI ; Comment: SR Debug values â€“ for TI internal use only
+#SR_Debug_Table = 09 04 19 10 01 00 F7 EF E6 DE 00 00 00 00 00 00  # Length: 16; Unit: SR_Debug_Table values; Format: Signed; Source: TI; Comment: SR Debug values – for TI internal use only
+#SR_SEN_N_P = 11 # Length: 1; Unit: SR_SEN_N_P values; Format: Unsigned; Source: TI; Comment: SR Debug values – for TI internal use only
+#SR_SEN_N_P_Gain = AA # Length: 1; Unit: SR_SEN_N_P_GAIN values; Format: Unsigned; Source: TI; Comment: SR Debug values – for TI internal use only
+#SR_SEN_NRN = B6 # Length: 1; Unit: SR_SEN_NRN values; Format: Unsigned; Source: TI ; Comment: SR Debug values – for TI internal use only
+#SR_SEN_PRN = F0 # Length: 1; Unit: SR_SEN_PRN values; Format: Unsigned; Source: TI ; Comment: SR Debug values – for TI internal use only
 #------------------------------------------------------------------------------------------------------------------------------------------------------------
 # SECTION 1.2: Band-dependant parameters
 #------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -82,3 +82,4 @@ FEM1_TxPDVsChannelOffsets_5G = 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0
 FEM1_TxPDVsTemperature_5G = 00 00 00 00 00 00 00 00 00 00 00 00 00 00 # Length: 14; Unit: 1/8dB; Format: Signed; Source: TI; Comment: This parameter is a power detector offset value used to correct the power detector curve for each temperture
 FEM1_TxIbiasTable_5G  = 10 10 10 10 10 10 10 # Length: 7; Unit: Codeword; Format: Unsigned; Source: TI; Comment: This parameter sets the bias current provided by the SoC to the PA in the FEM
 FEM1_RxFemInsertionLoss_5G  = 10 10 10 10 10 10 10 # Length: 7; Unit: 1/8dB; Format: Unsigned; Source: TI; Comment: This parameter specifies the received insertion loss of the WL128x
+
