--- a/ramdisk/init.endeavoru.rc
+++ b/ramdisk/init.endeavoru.rc
@@ -9,12 +9,6 @@ on early-init
     mkdir /mnt/sdcard 0775 system system
     symlink /mnt/sdcard /sdcard
 
-on early-boot
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
-
 on emmc-fs
     mount ext4 /dev/block/mmcblk0p12 /system wait rw
     mount ext4 /dev/block/mmcblk0p15 /data wait rw noatime nosuid nodev noauto_da_alloc
@@ -29,6 +23,8 @@ on emmc-fs
     mkdir /devlog 0700 root root
     mount ext4 /dev/block/mmcblk0p19 /devlog nosuid nodev
     start poweron_modem
+    start pollyd
+
 loglevel 8
 
 on post-fs-data
@@ -37,13 +33,13 @@ on post-fs-data
 
 
 on boot
-# Setup paths used for socket communication with the dhcp daemon(dhcpd)
-    	mkdir /data/nvcam 0777 system system
-	mkdir /data/misc/wifi 0777 wifi wifi
-	mkdir /data/misc/wifi/sockets 0777 wifi wifi
-        mkdir /data/misc/wifi/hostapd 0777 wifi wifi
-   	mkdir /data/misc/dhcp 0777 dhcp dhcp
-    	chown dhcp dhcp /data/misc/dhcp
+    # Setup paths used for socket communication with the dhcp daemon(dhcpd)
+    mkdir /data/nvcam 0777 system system
+    mkdir /data/misc/wifi 0777 wifi wifi
+    mkdir /data/misc/wifi/sockets 0777 wifi wifi
+    mkdir /data/misc/wifi/hostapd 0777 wifi wifi
+    mkdir /data/misc/dhcp 0777 dhcp dhcp
+    chown dhcp dhcp /data/misc/dhcp
 
 # bluetooth power up/down interface
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
@@ -51,6 +47,7 @@ on boot
     chmod 0660                /sys/class/rfkill/rfkill0/state
 
     chown system /sys/module/edp/parameters/edp_ap_limit
+    chown system /sys/block/mmcblk0/queue/scheduler
     chown system /sys/devices/system/cpu/cpufreq/ondemand/touch_poke
     chown system /sys/devices/system/cpu/cpu_on
     chown system /sys/kernel/debug/tegra_hotplug/min_cpus
@@ -70,30 +67,7 @@ on boot
     chown system /sys/htc/power_save
     chown system /sys/kernel/debug/tegra_emc/eack_state
 
-# Power management settings
-    write /sys/module/cpu_tegra3/parameters/no_lp 0
-    write /sys/devices/system/cpu/cpufreq/interactive/boost_factor 2
-    write /sys/devices/system/cpu/cpufreq/interactive/input_boost 1
-    write /sys/devices/system/cpu/cpufreq/interactive/sustain_load 80
-    write /sys/devices/system/cpu/cpu1/online 0
-    write /sys/devices/system/cpu/cpu2/online 0
-    write /sys/devices/system/cpu/cpu3/online 0
-    write /sys/kernel/debug/tegra_hotplug/max_cpus 1
-    write /sys/module/cpuidle/parameters/lp2_in_idle 1
-
-# Interactive governor settings
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/boost_factor
-    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/boost_factor
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/go_maxspeed_load
-    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/go_maxspeed_load
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
-    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/max_boost
-    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/max_boost
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/sustain_load
-    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/sustain_load
-
-# for radio signal stable
+    # for radio signal stable
     chown radio radio /sys/class/power_supply/battery/charger_control
     chmod 0660 /sys/class/power_supply/battery/charger_control
     chown radio radio /sys/class/power_supply/battery/phone_call
@@ -110,7 +84,7 @@ on boot
 
 # Define DATA USAGE CTRL file permission
     chown system system /proc/net/xt_qtaguid/ctrl
-    chmod 0664 /proc/net/xt_qtaguid/ctrl
+    chmod 0666 /proc/net/xt_qtaguid/ctrl
 
 # Load modules while booting
 	insmod /system/lib/modules/compat.ko
@@ -209,12 +183,50 @@ on boot
     write /proc/sys/net/ipv6/conf/rmnet1/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet2/accept_ra 2
 
+# Power management settings
+    write /sys/module/cpu_tegra3/parameters/no_lp 0
+    write /sys/devices/system/cpu/cpufreq/interactive/boost_factor 2
+    write /sys/devices/system/cpu/cpufreq/interactive/input_boost 1
+    write /sys/devices/system/cpu/cpufreq/interactive/sustain_load 80
+    write /sys/devices/system/cpu/cpu1/online 0
+    write /sys/devices/system/cpu/cpu2/online 0
+    write /sys/devices/system/cpu/cpu3/online 0
+    write /sys/kernel/debug/tegra_hotplug/max_cpus 1
+    write /sys/module/cpuidle/parameters/lp2_in_idle 1
+
+
+    chown system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate_min
+    chown system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
+    chown system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate_max
+    chown system /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor
+    chown system /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
+    chown system /sys/devices/system/cpu/cpufreq/ondemand/up_threshold
+    chown system /sys/devices/system/cpu/cpufreq/ondemand/touch_poke
+
+    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate_min 10000
+    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 50000
+    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor 1
+    write /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy 1
+    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold 85
+
+# Interactive governor settings
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/boost_factor
+    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/boost_factor
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/go_maxspeed_load
+    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/go_maxspeed_load
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
+    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/max_boost
+    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/max_boost
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/sustain_load
+    chmod 0664 /sys/devices/system/cpu/cpufreq/interactive/sustain_load
+
 # Increase read ahead size of mmc block devices from default(128) to 1MB
 # Reduces power comsuption during video playback from sdcards
-    write /sys/block/mmcblk0/queue/read_ahead_kb 2048
-    write /sys/block/mmcblk1/queue/read_ahead_kb 2048
+#    write /sys/block/mmcblk0/queue/read_ahead_kb 2048
+#    write /sys/block/mmcblk1/queue/read_ahead_kb 2048
 
-# Discretix DRM change start
+    # Discretix DRM change start
     mkdir /data/DxDrm
     mkdir /data/DxDrm/fuse
     chmod 555 /data/DxDrm
@@ -225,13 +237,23 @@ on boot
     mkdir /data/audio
     chmod 755 /data/audio
     chown media audio /data/audio
-    start call_vol3
 
 # compass/accelerometer daemon
 service akmd /system/bin/akmd
     class main
     user compass
     group compass misc input
+
+service tegra-post-boot /system/bin/sh /system/etc/init.tegra.post_boot.sh
+        class main
+        user root
+        disabled
+        oneshot
+
+service pollyd /system/bin/pollyd
+    class main
+    user root
+    group root
     
 # gyro daemon
 service ewtzmud /system/bin/ewtzmud
@@ -296,67 +318,67 @@ service htcbatt /system/bin/htcbatt
      oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
-	-Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
-	#   we will start as root and wpa_supplicant will switch to user wifi
-	#   after setting up the capabilities required for WEXT
-	#   user wifi
-	#   group wifi inet keystore
-	class main
-	socket wpa_wlan0 dgram 660 wifi wifi
-	disabled
-	oneshot
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
+    #   we will start as root and wpa_supplicant will switch to user wifi
+    #   after setting up the capabilities required for WEXT
+    #   user wifi
+    #   group wifi inet keystore
+    class main
+    socket wpa_wlan0 dgram 660 wifi wifi
+    disabled
+    oneshot
 
 service p2p_supplicant /system/bin/wpa_supplicant \
-	-Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf
-	#   we will start as root and wpa_supplicant will switch to user wifi
-	#   after setting up the capabilities required for WEXT
-	#   user wifi
-	#   group wifi inet keystore
-	class main
-	socket wpa_wlan0 dgram 660 wifi wifi
-	disabled
-	oneshot
+    -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf
+#   we will start as root and wpa_supplicant will switch to user wifi
+#   after setting up the capabilities required for WEXT
+#   user wifi
+#   group wifi inet keystore
+    class main
+    socket wpa_wlan0 dgram 660 wifi wifi
+    disabled
+    oneshot
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -aABKL
-	class main
-	disabled
-	oneshot
+    class main
+    disabled
+    oneshot
 
 service dhcpcd_p2p /system/bin/dhcpcd -aABKL
-	class main
-	disabled
-	oneshot
+    class main
+    disabled
+    oneshot
 
 service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
-	class main
-	disabled
-	oneshot
+    class main
+    disabled
+    oneshot
 
 service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
-	class main
-	disabled
-	oneshot
+    class main
+    disabled
+    oneshot
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
-	class main
-	disabled
-	oneshot
+    class main
+    disabled
+    oneshot
 
 service iprenew_p2p /system/bin/dhcpcd -n
-	class main
-	disabled
-	oneshot
+    class main
+    disabled
+    oneshot
 
 service iprenew_bnep0 /system/bin/dhcpcd -n
-	class main
-	disabled
-	oneshot
+    class main
+    disabled
+    oneshot
 
-service hostapd_bin /system/bin/hostapd -dd /data/misc/wifi/hostapd.conf
-         socket wpa_wlan0 dgram 660 wifi wifi
-         class main
-         disabled
-         oneshot
+service hostapd_bin /system/bin/logwrapper /system/bin/hostapd -dd /data/misc/wifi/hostapd.conf
+    class main
+    socket wpa_wlan0 dgram 660 wifi wifi
+    disabled
+    oneshot
 
 on property:wlan.driver.status=ok
     chown wifi wifi /sys/devices/platform/wl1271/bt_coex_state
@@ -383,6 +405,7 @@ service chmod_nvs_wlan0 /system/bin/chmod 644 /data/misc/wifi/wl1271-nvs-calibra
 	user root
 	group root
 	oneshot
+# HTC_WIFI_END
 
 #Prepare TF service
 service tf_daemon /system/bin/tf_daemon -storageDir /data/tf -d
@@ -401,6 +424,16 @@ on property:tf.enable=y
 service dx_drm_server /system/bin/DxDrmServerIpc -f -o allow_other /data/DxDrm/fuse
     class main
 
+# OMA DRM change start
+service fusermount /system/bin/fusermount -u /data/htcfs
+    disabled
+    oneshot
+
+service htcfs /system/bin/htcfs /data/htcfs -f -o allow_other
+    class main
+    onrestart restart fusermount
+# OMA DRM change end
+
 # create filesystems if necessary
 service setup_fs /system/bin/setup_fs \
         /dev/block/platform/sdhci-tegra.3/by-name/UDA \
@@ -410,6 +443,24 @@ service setup_fs /system/bin/setup_fs \
     user root
     group root
     oneshot
+
+service htc_ebdlogd /system/bin/htc_ebdlogd -s -k -P 7
+    user root
+    disabled
+    oneshot
+    ioprio idle 0
+
+service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k
+    user root
+    disabled
+    oneshot
+    ioprio idle 0
+
+on property:ro.build.tags=test-keys
+    start htc_ebdlogd
+
+on property:ro.build.tags=release-keys
+    start htc_ebdlogd_rel
 
 service cand /system/bin/cand
 	class main
@@ -421,11 +472,16 @@ service post_boot /system/bin/sh /system/etc/post_boot.sh
 	disabled
 	oneshot
 
-service call_vol3 /system/bin/pollyd
-       class main
-       user root
+# Adb over Network
+on property:service.adb.tcp.port=5555
+    stop adbd
+    start adbd
+on property:service.adb.tcp.port=-1
+    stop adbd
+    start adbd
 
 on property:init.svc.bootanim=stopped
    write /sys/kernel/debug/tegra_hotplug/max_cpus 4
    write /sys/module/cpu_tegra3/parameters/auto_hotplug 1
     start post_boot
+    start tegra-post-boot
